--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A small, 3D tilemap JavaScript engine",
   "private": true,
-  "main": "dist/index.js",
+  "main": "build/index.js",
   "scripts": {
     "startSandbox": "react-scripts start",
     "buildSandbox": "react-scripts build",
