--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.0",
+    "react-router-transition": "^1.3.0",
     "react-scripts": "3.1.1",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.6.3",
