--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   ],
   "rules": {
     "@typescript-eslint/no-this-alias": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "import/no-webpack-loader-syntax": "off"
   }
 }
