--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "dat.gui": "^0.7.6",
     "eslint": "^6.4.0",
     "gh-pages": "^2.1.1",
+    "raw-loader": "^3.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.0",
     "react-router-transition": "^1.3.0",
     "react-scripts": "3.1.1",
