--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-typescript": "^7.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
