--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "A small, 3D tilemap JavaScript engine",
   "private": true,
-  "main": "dist/index.js",
+  "main": "public/electron.js",
   "scripts": {
     "startSandbox": "react-scripts start",
     "buildSandbox": "react-scripts build",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy": "npm run buildSandbox",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "electron-dev": "concurrently \"BROWSER=none npm run startSandbox\" \"wait-on http://localhost:3000 && electron .\""
   },
   "repository": {
     "type": "git",
@@ -36,7 +37,11 @@
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
     "babel-loader": "^8.0.6",
+    "concurrently": "^4.1.2",
     "dat.gui": "^0.7.6",
+    "electron": "^6.0.10",
+    "electron-builder": "^21.2.0",
+    "electron-is-dev": "^1.1.0",
     "eslint": "^6.4.0",
     "gh-pages": "^2.1.1",
     "raw-loader": "^3.1.0",
@@ -46,8 +51,10 @@
     "react-router-dom": "^5.1.0",
     "react-router-transition": "^1.3.0",
     "react-scripts": "3.1.1",
+    "screen": "^0.2.10",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.6.3",
+    "wait-on": "^3.3.0",
     "webpack": "4.39.1",
     "webpack-cli": "^3.3.9"
   },
