--- a/package.json
+++ b/package.json
@@ -38,21 +38,27 @@
     "@typescript-eslint/parser": "^2.3.1",
     "babel-loader": "^8.0.6",
     "concurrently": "^4.1.2",
+    "css-loader": "^3.2.0",
     "dat.gui": "^0.7.6",
     "electron": "^6.0.10",
     "electron-builder": "^21.2.0",
     "electron-is-dev": "^1.1.0",
     "eslint": "^6.4.0",
     "gh-pages": "^2.1.1",
+    "highlight.js": "^9.15.10",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^5.1.0",
     "raw-loader": "^3.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.0",
+    "react-router-hash-link": "^1.2.2",
     "react-router-transition": "^1.3.0",
     "react-scripts": "3.1.1",
     "screen": "^0.2.10",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
     "typescript": "^3.6.3",
     "wait-on": "^3.3.0",
     "webpack": "4.39.1",
