--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
-  "presets": [
-    "@babel/preset-typescript"
-  ]
+	"presets": [
+		"@babel/preset-env",
+		"@babel/preset-react",
+		"@babel/preset-typescript"
+	],
+	"plugins": [
+		"@babel/plugin-proposal-class-properties"
+	]
 }
