--- a/package.json
+++ b/package.json
@@ -1,85 +1,90 @@
 {
-    "name": "threejs-tilemap",
-    "version": "1.0.0",
-    "description": "A 3D tilemap JavaScript engine",
-    "private": true,
-    "main": "public/electron.js",
-    "scripts": {
-        "startSandbox": "react-scripts start",
-        "buildSandbox": "react-scripts build",
-        "build": "webpack --mode production",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "predeploy": "npm run buildSandbox",
-        "deploy": "gh-pages -d build",
-        "electron-dev": "concurrently \"BROWSER=none npm run startSandbox\" \"wait-on http://localhost:3000 && electron .\""
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/christophgomez/tiles.js.git"
-    },
-    "author": "Christopher Gomez",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/christophgomez/tiles.js/issues"
-    },
-    "homepage": "https://christophgomez.github.io/tiles.js/",
-    "devDependencies": {
-        "@babel/core": "^7.6.0",
-        "@babel/preset-typescript": "^7.6.0",
-        "@fortawesome/fontawesome-svg-core": "^1.2.25",
-        "@fortawesome/free-brands-svg-icons": "^5.11.2",
-        "@fortawesome/free-solid-svg-icons": "^5.11.2",
-        "@fortawesome/react-fontawesome": "^0.1.4",
-        "@types/dat.gui": "^0.7.4",
-        "@types/jest": "^24.0.18",
-        "@types/node": "^12.7.5",
-        "@types/react": "^16.9.2",
-        "@types/react-dom": "^16.9.0",
-        "@typescript-eslint/eslint-plugin": "^2.3.1",
-        "@typescript-eslint/parser": "^2.3.1",
-        "babel-loader": "^8.0.6",
-        "concurrently": "^4.1.2",
-        "css-loader": "^3.2.0",
-        "electron": "^6.0.10",
-        "electron-builder": "^21.2.0",
-        "electron-is-dev": "^1.1.0",
-        "eslint": "^6.4.0",
-        "gh-pages": "^2.1.1",
-        "highlight.js": "^9.15.10",
-        "html-loader": "^0.5.5",
-        "markdown-loader": "^5.1.0",
-        "raw-loader": "^3.1.0",
-        "react": "^16.9.0",
-        "react-dom": "^16.9.0",
-        "react-markdown": "^4.2.2",
-        "react-router-dom": "^5.1.0",
-        "react-router-hash-link": "^1.2.2",
-        "react-router-transition": "^1.3.0",
-        "react-scripts": "3.1.1",
-        "screen": "^0.2.10",
-        "source-map-loader": "^0.2.4",
-        "style-loader": "^1.0.0",
-        "typescript": "^3.6.3",
-        "wait-on": "^3.3.0",
-        "webpack": "4.39.1",
-        "webpack-cli": "^3.3.9"
-    },
-    "dependencies": {
-        "dat.gui": "^0.7.6",
-        "prng-parkmiller-js": "^0.1.1",
-        "simplex-noise": "^2.4.0",
-        "three": "^0.108.0"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+	"name": "threejs-tilemap",
+	"version": "1.0.0",
+	"description": "A 3D tilemap JavaScript engine",
+	"private": true,
+	"module": "src/Engine.ts",
+	"main": "dist/index.js",
+	"scripts": {
+		"start-sandbox": "react-scripts start",
+		"build-sandbox": "react-scripts build",
+		"build": "webpack --mode production",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"predeploy": "npm run buildSandbox",
+		"deploy": "gh-pages -d build",
+		"electron-dev": "concurrently \"BROWSER=none npm run startSandbox\" \"wait-on http://localhost:3000 && electron .\""
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/christophgomez/tiles.js.git"
+	},
+	"author": "Christopher Gomez",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/christophgomez/tiles.js/issues"
+	},
+	"homepage": "https://christophgomez.github.io/tiles.js/",
+	"devDependencies": {
+		"@babel/core": "^7.9.0",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/preset-env": "^7.9.0",
+		"@babel/preset-react": "^7.9.4",
+		"@babel/preset-typescript": "^7.9.0",
+		"@fortawesome/fontawesome-svg-core": "^1.2.28",
+		"@fortawesome/free-brands-svg-icons": "^5.13.0",
+		"@fortawesome/free-solid-svg-icons": "^5.13.0",
+		"@fortawesome/react-fontawesome": "^0.1.9",
+		"@types/dat.gui": "^0.7.5",
+		"@types/jest": "^24.9.1",
+		"@types/node": "^12.12.32",
+		"@types/react": "^16.9.27",
+		"@types/react-dom": "^16.9.5",
+		"@typescript-eslint/eslint-plugin": "^2.25.0",
+		"@typescript-eslint/parser": "^2.25.0",
+		"babel-loader": "^8.1.0",
+		"concurrently": "^4.1.2",
+		"css-loader": "^3.4.2",
+		"electron": "^6.1.9",
+		"electron-builder": "^21.2.0",
+		"electron-is-dev": "^1.1.0",
+		"eslint": "^6.8.0",
+		"gh-pages": "^2.2.0",
+		"highlight.js": "^9.18.1",
+		"html-loader": "^0.5.5",
+		"markdown-loader": "^5.1.0",
+		"npm": "^6.14.4",
+		"raw-loader": "^3.1.0",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-markdown": "^4.3.1",
+		"react-router-dom": "^5.1.2",
+		"react-router-hash-link": "^1.2.2",
+		"react-router-transition": "^1.4.0",
+		"react-scripts": "^3.4.1",
+		"screen": "^0.2.10",
+		"source-map-loader": "^0.2.4",
+		"style-loader": "^1.1.3",
+		"typescript": "^3.8.3",
+		"wait-on": "^3.3.0",
+		"webpack": "4.42.0",
+		"webpack-cli": "^3.3.11"
+	},
+	"dependencies": {
+		"dat.gui": "^0.7.6",
+		"prng-parkmiller-js": "^0.1.1",
+		"simplex-noise": "^2.4.0",
+		"three": "^0.108.0"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
