--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "@tiles.js/engine",
-	"version": "1.0.1",
+	"name": "tiles-js",
+	"version": "0.0.1",
 	"description": "A 3D tilemap JavaScript engine",
 	"private": false,
-	"module": "src/Engine.ts",
+	"module": "dist/index.js",
 	"main": "dist/index.js",
 	"scripts": {
 		"start-sandbox": "react-scripts start",
