--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.0.1",
 	"description": "tiles.js: A 3D tilemap JavaScript engine",
 	"private": false,
-	"module": "dist/index.js",
-	"main": "dist/index.js",
+	"module": "dist/tiles.js",
+	"main": "dist/tiles.js",
 	"scripts": {
 		"start-sandbox": "react-scripts start",
 		"build-sandbox": "react-scripts build",
