--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"module": "dist/tiles.js",
 	"main": "dist/tiles.js",
 	"scripts": {
-		"start-sandbox": "react-scripts start",
+		"dev": "react-scripts start",
 		"build-sandbox": "react-scripts build",
 		"build": "webpack --mode production",
 		"deploy": "gh-pages -d build",
@@ -21,25 +21,22 @@
 	"bugs": {
 		"url": "https://github.com/christophgomez/tiles.js/issues"
 	},
-	"homepage": "https://christophgomez.github.io/tiles.js/",
+	"homepage": "/",
 	"devDependencies": {
 		"@babel/core": "^7.9.0",
 		"@babel/plugin-proposal-class-properties": "^7.8.3",
 		"@babel/preset-env": "^7.9.0",
 		"@babel/preset-react": "^7.9.4",
 		"@babel/preset-typescript": "^7.9.0",
-		"@fortawesome/fontawesome-svg-core": "^1.2.28",
-		"@fortawesome/free-brands-svg-icons": "^5.13.0",
-		"@fortawesome/free-solid-svg-icons": "^5.13.0",
-		"@fortawesome/react-fontawesome": "^0.1.9",
+		"@fortawesome/fontawesome-svg-core": "^6.4.0",
+		"@fortawesome/free-brands-svg-icons": "^6.4.0",
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@types/dat.gui": "^0.7.5",
 		"@types/jest": "^24.9.1",
 		"@types/node": "^12.12.32",
-		"@types/react": "^16.9.27",
-		"@types/react-dom": "^16.9.5",
-		"@typescript-eslint/eslint-plugin": "^2.25.0",
-		"@typescript-eslint/parser": "^2.25.0",
-		"babel-loader": "^8.1.0",
+		"@types/react": "^18.0.37",
+		"@types/react-dom": "^18.0.11",
 		"concurrently": "^4.1.2",
 		"css-loader": "^3.4.2",
 		"electron": "^6.1.9",
@@ -50,28 +47,31 @@
 		"highlight.js": "^9.18.1",
 		"html-loader": "^0.5.5",
 		"markdown-loader": "^5.1.0",
-		"npm": "^6.14.4",
 		"raw-loader": "^3.1.0",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-markdown": "^4.3.1",
-		"react-router-dom": "^5.1.2",
-		"react-router-hash-link": "^1.2.2",
-		"react-router-transition": "^1.4.0",
-		"react-scripts": "^3.4.1",
-		"screen": "^0.2.10",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-markdown": "^8.0.7",
+		"react-router-dom": "^6.10.0",
+		"react-scripts": "^5.0.1",
 		"source-map-loader": "^0.2.4",
 		"style-loader": "^1.1.3",
 		"typescript": "^3.8.3",
-		"wait-on": "^3.3.0",
 		"webpack": "4.42.0",
 		"webpack-cli": "^3.3.11"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"@mui/icons-material": "^5.11.16",
+		"@mui/material": "^5.12.1",
 		"dat.gui": "^0.7.6",
+		"mui-file-input": "^2.0.0",
 		"prng-parkmiller-js": "^0.1.1",
+		"react-json-editor-ajrm": "^2.5.14",
+		"resize-observer-polyfill": "^1.5.1",
 		"simplex-noise": "^2.4.0",
-		"three": "^0.108.0"
+		"three": "^0.108.0",
+		"three-addons": "^1.2.0"
 	},
 	"browserslist": {
 		"production": [
