--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 		"lib": [
 			"dom",
 			"dom.iterable",
-			"esnext"
+			"esnext",
+			"ES2021.String"
 		],
 		"skipLibCheck": true,
 		"esModuleInterop": true,
